2007-08-09  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (check_byte_reg): Support pextrb and pinsrb.

2007-07-29  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (check_long_reg): Allow cvtss2si to convert
	DWORD memory to Reg64 in Intel synax.
	(check_qword_reg): Allow cvtsd2si to convert QWORD memory to
	Reg32 in Intel syntax.

2007-07-25  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (xtensa_extui_opcode): New.
	(xg_expand_assembly_insn): Check for invalid extui operands.
	(md_begin): Initialize xtensa_extui_opcode.

2007-07-24  Nick Clifton  <nickc@redhat.com>

	* config/tc-mep.h (skip_whitespace): Remove definition.

2007-07-23  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (cpu_arch): Change i386 to PROCESSOR_I386.
	(f32_15): Removed.
	(jump_31): New.
	(f32_patt): Remove f32_15.
	(f16_patt): Likewise.
	(i386_align_code): Updated to alt_long_patt for 64bit by
	default.

	* config/tc-i386.h (processor_type): Add PROCESSOR_I386.

2007-07-23  Evandro Menezes  <evandro.menezes@amd.com>

	* config/tc-i386.c (i386_align_code): Enable alignment up to
	MAX_MEM_FOR_RS_ALIGN_CODE bytes.  Remove special treatment
	for K8.

	* config/tc-i386.h (MAX_MEM_FOR_RS_ALIGN_CODE): Changed to 31.

2007-07-20  Nick Clifton  <nickc@redhat.com>

	* app.c (do_scrub_chars): Provide a one character buffer to hold a
	pushed back newline at the end of an unterminated quoted string.

2007-07-14  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (create_register_alias): Return a boolean rather
	than an integer.
	Check the return value of insert_reg_alias and do not continue to
	create aliases once an insertion has failed.
	(s_unreq): Delete the all-upper-case and all-lower-case
	alternatives as well.

2007-07-12  Kai Tietz   <kai.tietz@onevision.com>

	* symbols.c: Print bfd_hostptr_t to file via fprintf_vma.
	* write.c: Likewise.

2007-07-11  Daniel Jacobowitz  <dan@codesourcery.com>
